[project]
name = "ancestral-ferry-forecast"
version = "0.1.0"
description = "Ferry forecasting"
authors = [
    {name = "Anthony Stephenson", email = "anthony.stephenson@bjss.com"},
]
dependencies = [
    "boto3[dynamodb]>=1.38.27",
    "dataclasses-json>=0.6.7",
    "dacite>=1.9.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
